roles/kubernetes/files/argocd/kubernetes-dashboard/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  tls:
    - hosts:
      - kubernetes-dashboard.bachstraat20.duckdns.org
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: ingress-tls
  rules:
    - host: kubernetes-dashboard.bachstraat20.duckdns.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            # This assumes http-svc exists and routes to healthy endpoints
            service:
              name: kubernetes-dashboard
              port: 
                number: 443
